User layout created

--- a/views/layouts/draft.html
+++ b/views/layouts/draft.html
@@ -11,7 +11,7 @@
 		<div class="jumbotron">
 		  <h1>Fit Rep</h1>
 			  <p> Welcome to Fit Rep! Make an Account! Build your Workout! And get to Reppin!</p>
-			  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn More</a></p>
+			  <p><a class="btn btn-primary btn-lg" href="#" role="button">Sign In</a> <a class="btn btn-primary btn-lg" href="#" role="button">Create Account</a></p>
 		</div>
 		<div class="row">
 		  <div class="col-sm-6 col-md-4">
