--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -11,7 +11,7 @@
               <img src="./assets/images/bells.jpg" alt="...">
               <div class="caption">
                 <p>Find a trainer to help personolize your workouts based off your personal goals</p>
-                <p><a href="#" class="btn btn-primary" role="button">Button</a></p>
+                <p><a href="#" id="find" class="btn btn-primary" role="button">Button</a></p>
               </div>
             </div>
           </div>
@@ -21,7 +21,7 @@
               <img src="./assets/images/community.jpg" alt="...">
               <div class="caption">
                 <p>Personalize your Profile and chat with the Community</p>
-                <p><a href="#" class="btn btn-primary" role="button">Button</a></p>
+                <p><a href="#" id="build" class="btn btn-primary" role="button">Button</a></p>
               </div>
             </div>
           </div>
@@ -31,7 +31,7 @@
               <img src="./assets/images/_main2_dip_2.jpg" alt="man doing dips">
               <div class="caption">
                 <p>Customize your workouts and share with the community!</p>
-                <p><a href="#" class="btn btn-primary" role="button">Button</a></p>
+                <p><a href="#" id="customize" class="btn btn-primary" role="button">Button</a></p>
               </div>
             </div>
           </div>
