successful user account creation, need to validate data

--- a/views/workouts.handlebars
+++ b/views/workouts.handlebars
@@ -17,10 +17,10 @@
     </div>
 </div>
 
-{{!-- <form class="create-update-form" action="/" method="POST">
+ <form class="create-update-form" action="/" method="POST">
     <div class="form-group">
         <label for="newBurger">Name of Burger:</label>
         <input type="text" id="newBurger" name="name">
     </div>
     <button type="submit">Make Burger</button>
-</form> --}}
+</form> 
