index page redirects to login and create account, need to set validation and link tables

--- a/views/create-account.handlebars
+++ b/views/create-account.handlebars
@@ -1,23 +1,44 @@
- <form class="create-update-form" action="/create-account" method="POST">
-    <div class="form-group">
-        <label for="first_name">First Name:</label>
-        <input type="text" id="first_name" name="first_name">
-        <label for="last_name">Last Name:</label>
-        <input type="text" id="lastName" name="last_name">
-        <label for="heightFt">Height (ft):</label>
-        <input type="text" id="heightFt" name="heightFt">
-        <label for="heightIn">(in):</label>
-        <input type="text" id="heightIn" name="heightIn">
-        <label for="weight">Weight:</label>
-        <input type="text" id="weight" name="weight">
-        <label for="age">Age:</label>
-        <input type="text" id="age" name="age">
-        <label for="email">Email:</label>
-        <input type="text" id="email" name="email">
-        <label for="username">Create Username:</label>
-        <input type="text" id="username" name="username">
-        <label for="pass">Password:</label>
-        <input type="text" id="pass" name="pass">
-    </div>
-    <button type="submit">Create Account</button>
-</form> 
+<div class="col-md-3"></div>
+<div class="col-md-6">
+    <form action="/create-account" method="POST">
+        <div class="form-group">
+            <label for="first_name">First Name:</label>
+            <input type="text" class="form-control" id="first_name" name="first_name">
+        </div>
+        <div class="form-group">
+            <label for="last_name">Last Name:</label>
+            <input type="text" class="form-control" id="lastName" name="last_name">
+        </div>
+        <div class="form-group">
+            <label for="heightFt">Height (ft):</label>
+            <input type="text" class="form-control" id="heightFt" name="heightFt">
+        </div>
+        <div class="form-group">
+            <label for="heightIn">(in):</label>
+            <input type="text" class="form-control" id="heightIn" name="heightIn">
+        </div>
+        <div class="form-group">
+            <label for="weight">Weight:</label>
+            <input type="text" class="form-control" id="weight" name="weight">
+        </div>
+        <div class="form-group">
+            <label for="age">Age:</label>
+            <input type="text" class="form-control" id="age" name="age">
+        </div>
+        <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="text" class="form-control" id="email" name="email">
+        </div>
+        <div class="form-group">
+            <label for="username">Create Username:</label>
+            <input type="text" class="form-control" id="username" name="username">
+        </div>
+        <div class="form-group">
+            <label for="pass">Password:</label>
+            <input type="text" class="form-control" id="pass" name="pass">
+        </div>
+<button class="text-center" type="submit">Create Account</button>
+</div>
+</form>
+</div>
+<div class="col-md-3"></div>
