--- a/views/exercises.handlebars
+++ b/views/exercises.handlebars
@@ -1,5 +1,17 @@
 <li>
     {{#each exercises}}
     <div>{{this.exercise}}</div>
+     <form class="create-update-form" action="/exercises" method="POST">
+    <div class="form-group">
+        <label for="weight">Weight:</label>
+        <input type="text" id="weight" name="weight">
+        <label for="set">Set:</label>
+        <input type="text" id="set" name="set">
+        <label for="rep">Rep:</label>
+        <input type="text" id="rep" name="rep">
+    </div>
+    <button type="submit">Submit</button>
+</form> 
     {{/each}}
 </li>
+
