--- a/views/workouts.handlebars
+++ b/views/workouts.handlebars
@@ -1,3 +1,6 @@
+<div class="title">
+    <h1>Welcome {{users.first_name}} {{users.loginData}} {{loginData.first_name}}</h1>
+</div>
 <div class="container">
     <div class="row">
         <div class="col-md-4"></div>
@@ -17,10 +20,10 @@
     </div>
 </div>
 
- <form class="create-update-form" action="/" method="POST">
+ {{!-- <form class="create-update-form" action="/" method="POST">
     <div class="form-group">
         <label for="newBurger">Name of Burger:</label>
         <input type="text" id="newBurger" name="name">
     </div>
     <button type="submit">Make Burger</button>
-</form> 
+</form>  --}}
