lots of changes

--- a/views/exercises.handlebars
+++ b/views/exercises.handlebars
@@ -1,5 +1,5 @@
 <li>
-    {{#each exercises}}
-    <div>{{this.exercise}}</div>
+    {{#each workoutData}}
+    <div>{{this.id}}.{{this.exercise}}</div>
     {{/each}}
 </li>
