updated some css, still need to write to workoutData table, and then display user data

--- a/views/create-account.handlebars
+++ b/views/create-account.handlebars
@@ -1,5 +1,10 @@
 <div class="col-md-3"></div>
-<div class="col-md-6">
+<div class="text-center col-md-6">
+    <a href="/">
+            <img id="logo" src="/assets/img/fitRepLogo.png"></img>
+        </a>
+        <h2 class="text-center">Creat an account to get started on your fitness journey today!</h2>
+        <br>
     <form action="/create-account" method="POST">
         <div class="form-group">
             <label for="first_name">First Name:</label>
@@ -37,8 +42,11 @@
             <label for="pass">Password:</label>
             <input type="text" class="form-control" id="pass" name="pass">
         </div>
-<button class="text-center" type="submit">Create Account</button>
+<button class="text-center btn btn-primary" type="submit">Create Account</button>
 </div>
 </form>
 </div>
 <div class="col-md-3"></div>
+<br>
+<br>
+<br>
