--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Fit Rep</title>
-	<script src="https://code.jquery.com/jquery.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-	<<link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
 	<div class="container">
 		<div class="jumbotron">
 		  <h1>Fit Rep</h1>
+			{{this.first_name}}
 			  <p> Welcome to Fit Rep! Make an Account! Build your Workout! And get to Reppin!</p>
 			  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn More</a></p>
 		</div>
@@ -46,5 +38,3 @@
 		  </div>
 		</div>
 	</div>
-</body>
-</html>
