--- a/views/exercises.handlebars
+++ b/views/exercises.handlebars
@@ -1,17 +1,25 @@
-<li>
-    {{#each exercises}}
-    <div>{{this.exercise}}</div>
-     <form class="create-update-form" action="/exercises" method="POST">
-    <div class="form-group">
-        <label for="weight">Weight:</label>
-        <input type="text" id="weight" name="weight">
-        <label for="set">Set:</label>
-        <input type="text" id="set" name="set">
-        <label for="rep">Rep:</label>
-        <input type="text" id="rep" name="rep">
+<div class="container">
+    <div class="text-center row">
+        <div class="text-center">
+            <a href="/">
+            <img id="logo" src="/assets/img/fitRepLogo.png"></img>
+        </a>
+        </div>
+        <h2>Select Your Exercise</h2>
+        {{#each exercises}}
+        <form class="create-update-form" action="/{{this.exercise}}?_method=GET" method="POST">
+            <div class="form-group">
+                <button class="btn btn-primary" id="{{this.exercise}}" type="submit">{{this.exercise}}</button> {{!--
+                <label
+                    for="weight">Weight:</label>
+                    <input class="form-control" type="text" id="weight" name="weight">
+                    <label for="set">Set:</label>
+                    <input class="form-control" type="text" id="set" name="set">
+                    <label for="reps">Rep:</label>
+                    <input class="form-control" type="text" id="reps" name="reps"> --}}
+            </div>
+            {{!-- <button class="btn btn-primary" type="submit">Submit</button> --}}
+        </form>
+        {{/each}}
     </div>
-    <button type="submit">Submit</button>
-</form> 
-    {{/each}}
-</li>
-
+</div>
